3. proje son hali

--- a/Blogy.DataAccesLayer/Blogy.DataAccesLayer.csproj
+++ b/Blogy.DataAccesLayer/Blogy.DataAccesLayer.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Blogy.DtoLayer\Blogy.DtoLayer.csproj" />
     <ProjectReference Include="..\Blogy.EntityLayer\Blogy.EntityLayer.csproj" />
   </ItemGroup>
 
