--- a/Blogy.WebUı/Blogy.WebUI.csproj
+++ b/Blogy.WebUı/Blogy.WebUI.csproj
@@ -38,15 +38,17 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.18" />
+    <PackageReference Include="X.PagedList" Version="10.5.7" />
+    <PackageReference Include="X.PagedList.Mvc.Core" Version="10.5.7" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Blogy.BussinessLayer\Blogy.BussinessLayer.csproj" />
+    <ProjectReference Include="..\Blogy.DtoLayer\Blogy.DtoLayer.csproj" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
-    <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Writer\Data\" />
     <Folder Include="wwwroot\userimage\" />
   </ItemGroup>
